Fix 'Bullet list display in Collapsed Topics course format' - #81.

--- a/style/course.css
+++ b/style/course.css
@@ -348,14 +348,15 @@
     border-radius: [[setting:coursesectionborderradius]];
 }
 
-.site-topic ul.section, .course-content ul.section {
-    margin: 0 0;
-}
-
 .site-topic ul,
 .course-content ul {
+    margin-left: 0.1em;
+}
+
+.site-topic ul.section, 
+.course-content ul.section {
+    margin: 0;
     padding-left: 0.2em;
-    margin-left: 1.2rem;
 }
 
 #newdiscussionform {
